2008-12-12  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_new): Don't read visuals settings
	from GConf, that's the job of the front-end

2008-12-12  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_motion_notify): Don't eat motion
	notify events, the xine-lib backend never did, and that's
	unneeded

2008-12-11  Philip Withnall  <philip@tecnocode.co.uk>

	* src/eggdesktopfile.c (set_startup_notification_timeout):
	Update libegg files from trunk libegg.

2008-12-11  Bastien Nocera  <hadess@hadess.net>

	* src/totem-video-indexer.c (main): Add --no-limit
	option to the indexer, as it exists in the thumbnailer

2008-12-11  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_new): Don't auto-resize by default

2008-12-11  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/Makefile.am:
	* src/Makefile.am:
	* src/backend/Makefile.am: Remove NVTV_{LIBS,CFLAGS} from
	the makefiles

2008-12-11  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c (totem_callback_connect): Fix the scrollwheel
	not working on the fullscreen seekbar (Closes: #563894)

2008-12-11  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/properties/bacon-video-widget-properties.c
	(bacon_video_widget_properties_from_metadata): Fix warnings
	playing back video from
	http://bugzilla.gnome.org/show_bug.cgi?id=564053

2008-12-10  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c (playlist_remove_files): Remove
	dead code

2008-12-10  Bastien Nocera  <hadess@hadess.net>

	* src/totem-uri.c (totem_uri_is_subtitle):
	* src/totem-uri.h: Add totem_uri_is_subtitle() to check
	whether a URI is a subtitle

	* src/totem-playlist.c (totem_playlist_set_current_subtitle):
	* src/totem-playlist.h: Add totem_playlist_set_current_subtitle()
	to set the subtitle for the currently playing movie
